--- a/app/frontend/view/mobile/home/index.html
+++ b/app/frontend/view/mobile/home/index.html
@@ -2,9 +2,278 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home - mintHouz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="{{frontend}}/lib/Swiper/swiper.min.css">
+    <link rel="stylesheet" href="{{frontend}}/lib/iconfont/iconfont.css">
+    <link rel="stylesheet" href="{{frontend}}/mobile/css/public/components.css">
+    <link rel="stylesheet" href="{{frontend}}/mobile/css/page/Home.css">
 </head>
 <body>
-<h1>hello mobile</h1>
+
+<header class="g-hd">
+
+    <div class="nav" id="nav">
+        <div class="logo">
+            <h1>
+                <a href="./Home.html">
+                    <img src="../img/minthouz-slogan.png" alt="">
+                </a>
+            </h1>
+        </div>
+
+        <div class="menu-bar" id="menu-bar">
+            <span></span>
+        </div>
+    </div>
+
+    <div class="menu-box" id="menu-box">
+        <ul class="menu-list">
+            <li class="menu-item">
+                <a class="item-link" href="./product-list.html">All Products</a>
+            </li>
+            <li class="menu-item">
+                <a class="item-link" href="./product-list.html">USB Fan</a>
+            </li>
+            <li class="menu-item">
+                <a class="item-link" href="./product-list.html">Table Lamp</a>
+            </li>
+            <li class="menu-item">
+                <a class="item-link" href="./product-list.html">Holder</a>
+            </li>
+            <li class="menu-item">
+                <a class="item-link" href="./product-list.html">Humidifier</a>
+            </li>
+            <li class="menu-item">
+                <a class="item-link" href="./product-list.html">Aromatherapy Diffuse</a>
+            </li>
+            <li class="menu-item">
+                <a class="item-link" href="#">Store <span class="iconfont iconarrow-down"></span></a>
+                <ul class="child-menu">
+                    <li class="menu-item"><a class="item-link" href="#">Amazon</a></li>
+                    <li class="menu-item"><a class="item-link" href="#">Newegg</a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+
+</header>
+
+<section>
+
+    <div class="banner swiper-container">
+        <div class=" swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="img-box">
+                    <a href="#">
+                        <img src="//china.wavlink.com/images/banner/en_US/WN575A4.jpg" alt="">
+                    </a>
+                </div>
+            </div>
+            <div class="swiper-slide">
+                <div class="img-box">
+                    <a href="#">
+                        <img src="//china.wavlink.com/images/banner/en_US/UG69PD2.jpg" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="swiper-pagination"></div><!--分页器-->
+        <!--<div class="swiper-button-prev"></div>&lt;!&ndash;左箭头&ndash;&gt;
+        <div class="swiper-button-next"></div>&lt;!&ndash;右箭头&ndash;&gt;-->
+    </div>
+
+    <div class="min">
+        <div class="min-list">
+            <div class="min-item">
+                <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/1.jpg?width=398&height=230&160516" alt=""></a>
+            </div>
+            <div class="min-item">
+                <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/8.jpg?width=398&height=230&160516" alt=""></a>
+            </div>
+            <div class="min-item">
+                <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/scooter20190303.jpg?width=398&height=230&160516" alt=""></a>
+            </div>
+        </div>
+    </div>
+
+    <div class="star">
+        <h3><span>STAR PRODUCTS</span></h3>
+        <div class="star-list">
+            <div class="left">
+                <div class="star-item">
+                    <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/4.jpg?width=612&height=612" alt=""></a>
+                </div>
+            </div>
+            <div class="right">
+                <div class="star-item">
+                    <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/5.jpg?width=612&height=612" alt=""></a>
+                </div>
+                <div class="star-item">
+                    <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/6.jpg?width=612&height=612" alt=""></a>
+                </div>
+                <div class="star-item">
+                    <a href="#"><img src="https://i01.appmifile.com/webfile/globalimg/us/USGrid/7.jpg?width=612&height=612" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="video">
+        <h3><span>VIDEOS</span></h3>
+        <div class="video-container swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <a class="play" href="javascript:void(0)" data-url="//china.wavlink.com/videos/690AD5.mp4" data-title="VITESSE - AC1900 High-speed Gaming WiFi Adapter with USB3.0 Dock">
+                        <div class="img-box">
+                            <img src="//china.wavlink.com/images/vitesse/VITESSE_AC1900.jpg" alt="...">
+                            <div class="icon-box">
+                                <span class="iconfont"></span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a class="play" href="javascript:void(0)" data-url="https://www.youtube.com/embed/ffpfdN4MxXk" data-title="Wavlink HALO Base AC1200 Dual-band Whole Home WiFi Mesh System with Touchlink">
+                        <div class="img-box">
+                            <img src="https://s3.amazonaws.com/files.wavlink.com/video/2020/01/wavlink_HALO_Base_AC1200.jpg" alt="...">
+                            <div class="icon-box">
+                                <span class="iconfont"></span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="swiper-slide">
+                    <a class="play" href="javascript:void(0)" data-url="https://www.youtube.com/embed/sZl057HvSt0" data-title="Why Should Choose AERIAL X WiFi Range Extender?">
+                        <div class="img-box">
+                            <img src="https://s3.amazonaws.com/files.wavlink.com/video/2020/01/AERIAL_X.jpg" alt="...">
+                            <div class="icon-box">
+                                <span class="iconfont"></span>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="swiper-pagination"></div><!--分页器-->
+            <!--<div class="swiper-button-prev"></div>&lt;!&ndash;左箭头&ndash;&gt;
+            <div class="swiper-button-next"></div>&lt;!&ndash;右箭头&ndash;&gt;-->
+        </div>
+    </div>
+
+</section>
+
+<div class="g-top" id="g-top">
+    <div class="box">
+        <span class="iconfont iconyooxi"></span>
+    </div>
+</div>
+
+<footer class="g-foot">
+    <div class="foot">
+        <div class="foot-item">
+            <dl>
+                <dt>STORE</dt>
+                <dd><a href="#">Amazon</a></dd>
+                <dd><a href="#">Newegg</a></dd>
+                <dd><a href="#">eBay</a></dd>
+            </dl>
+            <dl>
+                <dt>About</dt>
+                <dd><a href="#">minthouz</a></dd>
+                <dd><a href="#">User Agreement</a></dd>
+                <dd><a href="#">Privacy Policy</a></dd>
+            </dl>
+            <dl>
+                <dt>FIND US</dt>
+                <dd><i class="iconfont iconicon-test1"></i> <a href="#"><span>Facebook</span></a></dd>
+                <dd><i class="iconfont iconyoutube"></i> <a href="#"><span>Youtube</span></a></dd>
+                <dd><i class="iconfont iconinstagram"></i> <a href="#"><span>Instagram</span></a></dd>
+                <dd><i class="iconfont iconicon-test2"></i> <a href="#"><span>Twitter</span></a></dd>
+            </dl>
+        </div>
+
+        <div class="foot-contact">
+            <h3>Contact Us</h3>
+            <p><span>before sales: </span> <a href="mailto:postsales@wavlink.com">postsales@wavlink.com</a></p>
+            <p><span>after sales: </span> <a href="mailto:contact@wavlink.com">contact@wavlink.com</a></p>
+        </div>
+
+        <div class="contact">
+            <div class="des">
+                <h3>LET'S STAY IN TOUCH</h3>
+                <p>Get updates on sales specials and more</p>
+            </div>
+            <form action="">
+                <input type="email" id="email" placeholder="Enter Email Address">
+                <input type="submit" value=">">
+            </form>
+        </div>
+    </div>
+</footer>
+
+<script src="{{frontend}}/lib/JQuery/JQuery-3.4.0.js"></script>
+<script src="{{frontend}}/lib/layer/2.4/layer.js"></script>
+<script src="{{frontend}}/lib/Swiper/swiper.min.js"></script>
+<script src="{{frontend}}/mobile/js/public.js"></script>
+
+<script>
+    var mySwiper = new Swiper('.banner', {
+        loop: true,
+        autoplay: {    //可选选项，自动滑动
+            delay: 8000,   //自动滑动间隔
+            stopOnLastSlide: false,//如果设置为true，当切换到最后一个slide时停止自动切换。（loop模式下无效）。
+            disableOnInteraction: false//用户操作swiper之后，是否禁止autoplay。默认为true：停止。
+        },
+        speed: 1000,
+        pagination: {   //分页器
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+        navigation: {  //左右箭头
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+            hideOnClick: true,
+        },
+        grabCursor: true,//鼠标变手
+        parallax: true,//dl过度效果
+    });
+
+    var myVideoSwiper = new Swiper('.video-container', {
+        loop: true,
+        autoplay: {    //可选选项，自动滑动
+            delay: 8000,   //自动滑动间隔
+            stopOnLastSlide: false,//如果设置为true，当切换到最后一个slide时停止自动切换。（loop模式下无效）。
+            disableOnInteraction: false//用户操作swiper之后，是否禁止autoplay。默认为true：停止。
+        },
+        speed: 1000,
+        pagination: {   //分页器
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+        navigation: {  //左右箭头
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+            hideOnClick: true,
+        },
+        grabCursor: true,//鼠标变手
+        parallax: true,//dl过度效果
+    });
+
+    $(function () {
+        $('.play').click(function () {
+            var url = $(this).attr('data-url');
+            var title = $(this).attr('data-title');
+            layer.open({
+                type: 2,
+                title: title,
+                maxmin: true,
+                shadeClose: true,
+                area: ['98%', '400px'],
+                content: url,
+            })
+        });
+    })
+</script>
+
 </body>
 </html>
