--- a/app/frontend/view/desktop/home/index.html
+++ b/app/frontend/view/desktop/home/index.html
@@ -138,7 +138,7 @@
                         {$vo.description}
                     </p>
                     <span>
-                        <a data-swiper-parallax="-4500" data-swiper-parallax-opacity="0">
+                        <a href="#" data-swiper-parallax="-4500" data-swiper-parallax-opacity="0">
                             {$vo.button}
                         </a>
                     </span>
@@ -260,6 +260,12 @@
         <div class="common-width">
             <div class="foot-item">
                 <dl>
+                    <dt>About</dt>
+                    <dd><a href="#">minthouz</a></dd>
+                    <dd><a href="#">User Agreement</a></dd>
+                    <dd><a href="#">Privacy Policy</a></dd>
+                </dl>
+                <dl>
                     <dt>STORE</dt>
                     <dd><a href="#">Amazon</a></dd>
                     <dd><a href="#">Newegg</a></dd>
@@ -271,12 +277,6 @@
                     <dd><i class="iconfont iconyoutube"></i> <a href="#"><span>Youtube</span></a></dd>
                     <dd><i class="iconfont iconinstagram"></i> <a href="#"><span>Instagram</span></a></dd>
                     <dd><i class="iconfont iconicon-test2"></i> <a href="#"><span>Twitter</span></a></dd>
-                </dl>
-                <dl>
-                    <dt>About</dt>
-                    <dd><a href="#">minthouz</a></dd>
-                    <dd><a href="#">User Agreement</a></dd>
-                    <dd><a href="#">Privacy Policy</a></dd>
                 </dl>
             </div>
 
