--- a/app/frontend/view/desktop/home/index.html
+++ b/app/frontend/view/desktop/home/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{$BaseSetting.title} - mintHouz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <meta name="keywords" content="{$BaseSetting.keywords}">
     <meta name="description" content="{$BaseSetting.description}">
     <link rel="stylesheet" href="{{frontend}}/lib/iconfont/iconfont.css">
