--- a/app/frontend/view/desktop/product/product-list.html
+++ b/app/frontend/view/desktop/product/product-list.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>product-list - minthouz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="{{frontend}}/lib/iconfont/iconfont.css">
     <link rel="stylesheet" href="{{frontend}}/desktop/css/public/components.css">
     <!--私有页面样式文件-->
