--- a/public/static/frontend/desktop/css/public/components.less
+++ b/public/static/frontend/desktop/css/public/components.less
@@ -112,6 +112,7 @@ body {
     line-height: 60px;
     text-align: center;
     color: @whiteSmoke;
+    font-size: 14px;
     .des {
         display: inline;
         color: @whiteSmoke;
@@ -124,6 +125,11 @@ body {
     .close {
         margin-left: 20px;
         cursor: pointer;
+    }
+    @media screen and (min-width: 768px) and (max-width: 991px) {
+        height: 40px;
+        line-height: 40px;
+        font-size: 12px;
     }
 }
 //重大通知
@@ -294,17 +300,24 @@ body {
             padding: 0 10px;
         }
         .nav {
+            position: static;
             padding: 0 10px;
+            background: @whiteColor;
+        }
+        .nav .logo a {
+            .clearFix();
+            padding: 5px;
         }
         .nav .menu-box .menu-list .menu-item {
-            padding: 20px 5px;
+            padding: 15px 5px;
         }
         .nav .item-children {
             padding: 0 10px;
+            top: 120px;
         }
         .nav .item-children .children-list {
             width: 33.333%;
-            padding: 50px 10px;
+            padding: 20px 10px;
             &:nth-of-type(1), &:nth-of-type(2), &:nth-of-type(3) {
                 padding-bottom: 0;
             }
