--- a/app/admin/view/common/aside.html
+++ b/app/admin/view/common/aside.html
@@ -19,11 +19,6 @@
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>语言列表</cite></a>
                             </li>
-                            <li>
-                                <!--<a onclick="xadmin.add_tab('等级管理','member-list1.html')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>已停用</cite></a>-->
-                            </li>
                         </ul>
                     </li>
                     <li>
@@ -32,7 +27,7 @@
                             <cite>管理员</cite>
                             <i class="iconfont nav_right">&#xe697;</i>
                         </a>
-                        <ul class="sub-menu">
+                        <!--<ul class="sub-menu">
                             <li>
                                 <a onclick="xadmin.add_tab('管理员列表','{:url(\'user_list\')}')">
                                     <i class="iconfont">&#xe6a7;</i>
@@ -48,7 +43,7 @@
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>权限管理</cite></a>
                             </li>
-                        </ul>
+                        </ul>-->
                     </li>
                     <li>
                         <a href="javascript:;">
@@ -63,12 +58,6 @@
                                     <cite>基本设置</cite>
                                 </a>
                             </li>
-                            <!--<li>
-                                <a onclick="xadmin.add_tab('角色管理','{:url(\'role_list\')}')">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>安全设置</cite>
-                                </a>
-                            </li>-->
                         </ul>
                     </li>
                 </ul>
@@ -148,34 +137,6 @@
                     </li>
                 </ul>
             </li>
-            <!--<li>
-                <a href="javascript:;">
-                    <i class="iconfont left-nav-li" lay-tips="其它页面">&#xe6b4;</i>
-                    <cite>其它页面</cite>
-                    <i class="iconfont nav_right">&#xe697;</i></a>
-                <ul class="sub-menu">
-                    <li>
-                        <a href="login.html" target="_blank">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>登录页面</cite></a>
-                    </li>
-                    <li>
-                        <a onclick="xadmin.add_tab('错误页面','error.html')">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>错误页面</cite></a>
-                    </li>
-                    <li>
-                        <a onclick="xadmin.add_tab('示例页面','demo.html')">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>示例页面</cite></a>
-                    </li>
-                    <li>
-                        <a onclick="xadmin.add_tab('更新日志','log.html')">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>更新日志</cite></a>
-                    </li>
-                </ul>
-            </li>-->
         </ul>
     </div>
 </div>
