--- a/app/admin/view/user/user/login.html
+++ b/app/admin/view/user/user/login.html
@@ -2,7 +2,7 @@
 <html class="x-admin-sm">
 <head>
     <meta charset="UTF-8">
-    <title>WAVLINK内容系统-管理登录</title>
+    <title>内容系统-管理登录</title>
     <meta name="renderer" content="webkit|ie-comp|ie-stand">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8"/>
@@ -20,7 +20,7 @@
 <body class="login-bg">
 
 <div class="login layui-anim layui-anim-up">
-    <div class="message">WAVLINK 内容系统-管理登录</div>
+    <div class="message">内容系统-管理登录</div>
     <div id="darkbannerwrap"></div>
 
     <form method="post" class="layui-form">
@@ -30,8 +30,8 @@
         <hr class="hr15">
         <div class="">
             <select name="language" lay-verify="">
-                <option value="1">简体中文</option>
-                <option value="2">美国英文</option>
+                <option value="1">英语</option>
+                <option value="2" >简体中文</option>
             </select>
         </div>
         <hr class="hr15">
