--- a/app/admin/view/system/language/index.html
+++ b/app/admin/view/system/language/index.html
@@ -23,7 +23,7 @@
                 <div class="layui-card-body layui-table-body layui-table-main">
                     <table class="layui-table layui-form">
                         <colgroup>
-                            <col width="80">
+<!--                            <col width="80">-->
                             <col width="120">
                             <col width="120">
                             <col>
@@ -33,9 +33,9 @@
                         </colgroup>
                         <thead>
                         <tr class="text-center">
-                            <th>
+                            <!--<th>
                                 <input type="checkbox" lay-filter="checkall" name="" lay-skin="primary">
-                            </th>
+                            </th>-->
                             <th>语种</th>
                             <th>标识（code）</th>
                             <th>描述（description）</th>
@@ -48,20 +48,31 @@
                         {notempty name="data.data"}
                         {volist name="data.data" id="vo"}
                         <tr>
-                            <td>{$vo.id}</td>
+<!--                            <td>{$vo.id}</td>-->
                             <td>{$vo.name}</td>
                             <td>{$vo.code}</td>
                             <td>{$vo.remark}</td>
                             <td>{$vo.update_time|date='Y-m-d'}</td>
-                            <td class="td-status"><span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
+                            <td class="td-status">
+                                {if($vo.status == 1)}
+                                <button class="layui-btn layui-btn-normal layui-btn-mini">启用</button>
+                                {else /}
+                                <button class="layui-btn layui-btn-danger layui-btn-mini">禁用</button>
+                                {/if}
+                            </td>
                             <td class="td-manage">
                                 <a title="编辑" onclick="xadmin.open('编辑','{:url(\'system/edit_language\',[\'id\'=>$vo.id])}',600,400)"
                                    href="javascript:;" class="layui-btn">
                                     <i class="layui-icon" style="font-size: 22px">&#xe642;</i>
                                 </a>
-                                <a title="删除" onclick="changeStatus(this,'要删除的id')" href="javascript:;" class="layui-btn layui-btn-danger">
+                                {if($vo.status == 2)}
+                                <button class="layui-btn layui-btn-normal layui-btn-mini" onclick="changeStatus('{:url(\'system/change_status\',[\'id\'=>$vo.id,\'status\'=>1])}')">启用</button>
+                                {else /}
+                                <button class="layui-btn layui-btn-danger layui-btn-mini" onclick="changeStatus('{:url(\'system/change_status\',[\'id\'=>$vo.id,\'status\'=>2])}')">禁用</button>
+                                {/if}
+                                <!--<a title="删除" onclick="changeStatus(this,'要删除的id')" href="javascript:;" class="layui-btn layui-btn-danger">
                                     <i class="layui-icon" style="font-size: 22px">&#xe640;</i>
-                                </a>
+                                </a>-->
                             </td>
                         </tr>
                         {/volist}
@@ -78,6 +89,7 @@
 </div>
 {/block}
 {block name="javascript"}
+<script src="{{admin}}/js/common.js"></script>
 <script>
     layui.use(['laypage'], function () {
         var laypage = layui.laypage;
